修改模板，修改配置文件

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,8 +1,11 @@
-<div class="info">
-  Posted on $date$ $if(author)$ by $author$ $endif$
+<div class="post">
+  <article>
+    <header>
+      <h2 class="post-title">$title$</h2>
+      <p class="metadata">
+        <span class="date">$date$</span> - <span class="tags">$tags$</span>
+      </p>
+    </header>
+    $body$
+  </article>
 </div>
-
-<div class="info">
-  $if(tags)$ Tags: $tags$ $endif$
-</div>
-$body$
