--- a/templates/default.html
+++ b/templates/default.html
@@ -29,7 +29,7 @@
               <a href="/">Home</a>
             </li>
             <li>
-              <a href="/archive.html">Posts</a>
+              <a href="/archive.html">Archives</a>
             </li>
             <li>
               <a href="/about.html">About</a>
