修改模板，修改配置文件

--- a/templates/default.html
+++ b/templates/default.html
@@ -29,7 +29,10 @@
               <a href="/">Home</a>
             </li>
             <li>
-              <a href="/archive.html">Archives</a>
+              <a href="/posts.html">Posts</a>
+            </li>
+            <li>
+              <a href="/tags.html">Tags</a>
             </li>
             <li>
               <a href="/about.html">About</a>
