--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,8 +1,8 @@
-<ul class="posts">
-	$for(posts)$
-	<li>
-  	<a href="$url$">$title$</a>
+<article>
+  $for(posts)$
+	<p>
+    <a href="$url$">$title$</a>
   	- <em>$date$</em>
-	</li>
+	</p>
 	$endfor$
-</ul>
+</article>
