--- a/templates/default.html
+++ b/templates/default.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <h1>
-        <a href="/">blog.iyue.club
+        <a href="/">Joey's Blog
         </a>
       </h1>
 
